<resources>
    <string name="app_name">SubscriptBea</string>

    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_subscription_type">Subscription type</string>
    <string name="prompt_start_date">Start date</string>
    <string name="prompt_amount">Amount</string>

    <string name="action_sign_in">Log in</string>
    <string name="action_dont_have_account">Don\'t have an account? SIGNUP</string>
    <string name="action_sign_up">Sign Up</string>

    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="Are_you_sure_delete_subscription">Are you sure you want to delete this subscription?</string>
    <string name="Are_you_sure_logout">Are you sure you want to logout?</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification Channel Description</string>
    <string name="notification_title">Alert</string>
    <string name="notification_message">You are too far!</string>
    <string name="notification_channel">NOTIFICATION_CHANNEL</string>
    <string name="appwidget_text">Add Subscriptions</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string-array name="subscriptionTypes">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
        <item>Quaterly</item>
        <item>Half-yearly</item>
        <item>Annual</item>
    </string-array>
</resources>