<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".activity.AddSubscriptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/subscriptionTitle"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_title"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/username3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/subscriptionType"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_subscription_type"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username2" />

            <EditText
                android:id="@+id/subscriptionStartDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_start_date"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username2" />

            <EditText
                android:id="@+id/subscriptionAmount"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_amount"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:onClick="btnAddSubscriptionDataAction"
                    android:singleLine="true"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/buttonYellow"
                    app:cornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:onClick="btnDeleteAction"
                    android:singleLine="true"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#FF0000"
                    app:cornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password2" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>